<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Home</string>
    <string name="lang_key">en</string>

    <string name="add_new_device">Add new device</string>
    <string name="settings">Settings</string>
    <string name="update_statuses">Update statuses</string>
    <string name="add_fresh_device">&lt;big&gt;Add fresh device&lt;/big&gt;&lt;small&gt;&lt;br /&gt;&lt;br /&gt;Choose this option to configure new device. Usually it works as Wi-Fi access point. Setup will start with finding new device and connecting it to your home Wi-Fi network.&lt;/small&gt;</string>
    <string name="add_configured_device">&lt;big&gt;Add configured device&lt;/big&gt;&lt;small&gt;&lt;br /&gt;&lt;br /&gt;Choose this option to add device, which is available for your smartphone in the currently connected network or by external IP address.&lt;/small&gt;</string>
    <string name="wifi_is_off">Wi-Fi is off</string>
    <string name="enable_wifi_prompt">Please enable Wi-Fi and try again.</string>
    <string name="searching_fresh_devices">Searching for fresh Smart Home devices…</string>
    <string name="you_declined_permission_request">You declined permission request, app can\'t use wi-fi</string>
    <string name="warning">Warning</string>
    <string name="permission_request_explanation">Now app will ask you for location permission. This is required to allow app to scan wi-fi. No location information will be gathered.\n\nIf you decline permission request, app will not be able to add fresh device.</string>
    <string name="search_finished_nothing_found">Search for fresh devices has finished.\n\nNo fresh devices were found.</string>
    <string name="search_finished_choose_device">Search for fresh devices has finished.\n\nIf you see your device in the list, tap it.</string>
    <string name="connecting_to_device">Connecting to the device…</string>
    <string name="connected_to_device">Connected to the device successfully.\n</string>
    <string name="choose_your_home_network">Now choose your home network or input it\'s name manually. Searching for Wi-Fi networks…</string>
    <string name="input_network_manually">Input network name manually</string>
    <string name="network_ssid">Network name (SSID)</string>
    <string name="passphrase">Passphrase</string>
    <string name="show_passphrase">Show passphrase</string>
    <string name="connect_device">Connect Smart Home device to this network</string>
    <string name="error">Error</string>
    <string name="device_unexpected_response">Device answers with unexpected response!\n\nAdding new device failed.</string>
    <string name="device_unexpected_response_2">Device answers with unexpected response!\n\nConnection settings haven\'t been changed.</string>
    <string name="device_bad_response_code">Device answers with bad response code!\n\nAdding new device failed.</string>
    <string name="device_bad_response_code_2">Device answers with bad response code!\n\nConnection settings haven\'t been changed.</string>
    <string name="device_bad_connect">Connection problems occurred!\n\nAdding new device failed.</string>
    <string name="device_connection_lost">Connection to the device was lost!\n\nAdding new device failed.</string>
    <string name="device_connect_failed">Failed to connect to the device!\n\nAdding new device failed.</string>
    <string name="device_connect_failed_2">Failed to connect to the device!\n\nConnection settings haven\'t been changed.</string>
    <string name="device_could_not_connect_to_wifi">The device could not connect to chosen Wi-Fi network!\n\nPlease check that network name and passphrase are correct and the device is in range.</string>
    <string name="device_connected_successfully">Smart Home device has successfully connected to network %1$s.\n\nNow you should connect your smartphone to the same network if it will not do that automatically.</string>
    <string name="searching_configured_devices">Searching for configured and not added earlier Smart Home devices in your current network…</string>
    <string name="input_device_ip_manually">Input device\'s IP address manually</string>
    <string name="search_configured_finished_nothing_found">Search for configured devices has finished.\n\nConfigured and not added earlier devices were not found.</string>
    <string name="search_configured_finished_choose_device">Search for configured devices has finished.\n\nIf you see needed device in the list, tap it.</string>
    <string name="ip_address_and_port">IP address and port</string>
    <string name="ip_address_is_static_or_external">IP address is static or external</string>
    <string name="management_password">Management password</string>
    <string name="show_password">Show password</string>
    <string name="add_smart_home_device">Add Smart Home device</string>
    <string name="invalid_ip_or_port">Invalid IP address or port!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="device_already_added">This device is already added!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question">Question</string>
    <string name="device_already_added_with_other_ip">This device is already added, but with another IP address and/or port.\n\nWould you like to update them?</string>
    <string name="device_settings">Device settings</string>
    <string name="connection_settings">Connection settings</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="input_pin">Input pin — %1$d</string>
    <string name="dimmer_settings">Dimmers settings</string>
    <string name="this_settings_are_unavailable">This settings are unavailable, because device is not connected.\n\nCheck \"Connection settings\".</string>
    <string name="device_settings_successfully_saved">Settings were saved on the device successfully!</string>
    <string name="connection_settings_updated">Connection settings were updated successfully!</string>
    <string name="failed_to_save_settings">Failed to save settings on the device!</string>
    <string name="pin">Pin</string>
    <string name="order">Order</string>
    <string name="change_speed">Change speed</string>
    <string name="min_lightness">Min lightness (μs)</string>
    <string name="max_lightness">Max lightness (μs)</string>
    <string name="switchers_settings">Switchers settings</string>
    <string name="inverted">Inverted</string>
    <string name="restrictions_for_change_speed">Lightness change speed must be in range %1$d–%2$d.\n\nBad value: \'%3$s\'</string>
    <string name="restrictions_for_micros">Microseconds for min and max lightness must be in range %1$d–%2$d.\n\nBad value: \'%3$s\'</string>
    <string name="restrictions_for_min_max_micros">Microseconds for min lightness must always be greater than microseconds for max lightness.\n\nBad values: %1$d and %2$d.</string>
    <string name="device_was_already_in_the_list">Device with this MAC address was already in your list!\n\nNow it has been reconfigured. And it\'s connection settings have been updated.</string>
    <string name="others_devices_mac_address">Other device (with different MAC address) answers by specified connection settings!</string>
    <string name="function_unavailable">Sorry, but this feature is not available for Android lower than 10!</string>
    <string name="active">Active</string>
    <string name="confirm_delete">Are you sure you want to remove device \"%1$s\" from the list?</string>
    <string name="confirm_firmware_update">Firmware update to version %1$d is available for device \"%2$s\".\n\nWhat\'s new in this version:\n%3$s\n\nProceed with update?</string>
    <string name="confirm_firmware_update_2">Firmware update will take about 30 seconds. You will be informed about the results.\n\nPLEASE DO NOT CLOSE THE APP OR TURN OFF DEVICE \"%1$s\" DURING THE UPDATE!\n\nProceed with update?</string>
    <string name="update_started">Firmware update of device \"%1$s\" started…</string>
    <string name="dimmers_should">On device boot dimmers should</string>
    <string name="switchers_should">On device boot switchers should</string>
    <string name="use_last_positions">use last positions</string>
    <string name="set_to_position">set to following position</string>
    <string name="device_does_not_support_feature">The device does not support this feature!\nPlease update it\'s firmware.</string>
    <string name="update_uploaded">Update uploaded</string>
    <string name="update_uploaded_message">New firmware was successfully uploaded on device \"%1$s\"!\n\nNow the device will reboot and reconnect to network.</string>
    <string name="firmware_hash_mismatch">Failed to download new firmware from server: hash mismatches!</string>
    <string name="firmware_download_failed">Failed to download new firmware from server!</string>
    <string name="firmware_download_bad_response">Failed to download new firmware: server responded with bad code!</string>
    <string name="firmware_upload_failed_to_prepare_buffer">Failed to upload new firmware to device: could not prepare buffer for sending!</string>
    <string name="firmware_upload_failed">Failed to upload new firmware to device!</string>
    <string name="firmware_update_failed_with_error">New firmware was uploaded to device, but it responded with error!</string>
    <string name="firmware_update_unexpected_response">New firmware was uploaded to device, but it responded with unexpected message!</string>
    <string name="app_settings">Application settings</string>
    <string name="firebase_token_was_copied">Copied firebase token to clipboard</string>
    <string name="failed_to_obtain">&lt;failed to obtain&gt;</string>
    <string name="failed_to_open_needed_settings">Failed to open needed settings automatically. Please, open them manually!</string>
    <string name="phone_find_setup">Setting for ringing this device from server</string>
    <string name="go_to_autostart_settings">Go to Autostart settings</string>
    <string name="go_to_hidden_activity_settings">Go to app\'s background settings</string>
    <string name="step_1_copy_firebase_token">1. Copy firebase-token of this installation and put it to Alice server config:</string>
    <string name="step_2_activate_autostart">2. In \"Security -> Permissions -> Autostart\" find \"Smart Home\" and activate the switch.</string>
    <string name="step_3_set_no_power_restrictions">3. In \"Battery -> Applications\" find \"Smart Home\" and set \"No restrictions\".</string>
    <string name="step_4_choose_ring_sound">4. Choose sound for device search:</string>
    <string name="device_search_sound_changed">Sound for device search was changed</string>
    <string name="phone_find_notification_channel_title">Device search channel</string>
    <string name="phone_find_notification_channel_description">Channel for searching this device from server</string>
    <string name="phone_find_notification_title">Ringing…</string>
    <string name="phone_find_notification_text">This device is being searched!</string>
    <string name="phone_find_notification_action_device_found">Device is found</string>
    <string name="sound_nasty_but_very_loud">Nasty, but very loud</string>
    <string name="sound_as_in_mi_fit">As in Mi Fit</string>
</resources>