<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_find_setup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:text="@string/step_1_copy_firebase_token" />

        <TextView
            android:id="@+id/txtFirebaseToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/editTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/step_2_activate_autostart" />

        <Button
            android:id="@+id/btnGoToAutostartSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/go_to_autostart_settings"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/step_3_set_no_power_restrictions" />

        <Button
            android:id="@+id/btnGoToAppsPerformanceSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/go_to_hidden_activity_settings"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/step_4_choose_ring_sound" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSoundNastyButLoud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_nasty_but_very_loud"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rbSoundAsInMiFit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_as_in_mi_fit"
                android:checked="false" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>