<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_address_and_port" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtCfgDevIpAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="text"
                android:maxLength="15"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edtCfgDevPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="5"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cbCfgDevIpIsStatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:text="@string/ip_address_is_static_or_external" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/management_password" />

        <EditText
            android:id="@+id/edtCfgDevPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />

        <CheckBox
            android:id="@+id/cbShowCfgDevPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/show_password" />

        <Button
            android:id="@+id/btnAddDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_smart_home_device" />

    </LinearLayout>

</ScrollView>