<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDeviceSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button_text_for_pressed_tab"
                android:text="@string/device_settings"
                style="?android:attr/buttonBarButtonStyle" />

            <View
                android:id="@+id/underlineDeviceSettings"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E6E6E6" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnConnectionSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_settings"
                style="?android:attr/buttonBarButtonStyle" />

            <View
                android:id="@+id/underlineConnectionSettings"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E6E6E6"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="#E6E6E6" />

    <ViewFlipper
        android:id="@+id/settingsViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_settings_are_unavailable" />

        </ScrollView>

        <include layout="@layout/device_settings_device" />
        <include layout="@layout/device_settings_connection" />

    </ViewFlipper>

</LinearLayout>