<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dimmer_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="№" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="Резкость изменения" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="Мин яркость (мкс)" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="Макс яркость (мкс)" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="1"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/dim0_valueChangeStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="2"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim0_minLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim0_maxLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="2"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/dim1_valueChangeStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="2"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim1_minLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim1_maxLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="3"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/dim2_valueChangeStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="2"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim2_minLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/dim2_maxLightnessMicros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:maxLength="4"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveDeviceSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>